--- a/07 visualization callback.ipynb
+++ b/07 visualization callback.ipynb
@@ -4,21 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To explore this ipython notebook, press `SHIFT+ENTER` to progress to the next cell. Feel free to make changes, enter code, and hack around. You can create new code cells by selecting `INSERT->Insert Cell Below`\n",
+    "# Visualization Callback Example\n",
     "\n",
-    "# MNIST Example\n",
-    "\n",
-    "MNIST is a computer vision dataset consisting of 70,000 images of handwritten digits. Each image has 28x28 pixels for a total of 784 features, and is associated with a digit between 0-9.\n",
-    "\n",
-    "<img src=\"http://corpocrat.com/wp-content/uploads/2014/10/figure_1.png\" width=200px>\n",
-    "\n",
-    "\n",
-    "In this tutorial, we will construct a multi-layer perceptron (also called softmax regression) to recognize each image. Note that this tutorial assumes some basic familiarity with python and machine learning.\n",
-    "\n",
-    "This tutorial is similar to the model specified in `examples/mnist_mlp.py`.\n",
     "\n",
     "## Preamble\n",
-    "The first step is to set up our compute backend."
+    "Before we dive into creating a callback, we'll need a simple model to work with.  This tutorial uses a model similar to the one in neon's `examples/mnist_mlp.py`, but the same callback should apply to any model."
    ]
   },
   {
@@ -30,180 +20,30 @@
    "outputs": [],
    "source": [
     "from neon.backends import gen_backend\n",
-    "\n",
-    "be = gen_backend(batch_size=128)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "The MNIST dataset can be found on Yann LeCunn’s website. We have included an easy function that downloads the MNIST dataset into your `~/nervana/data/` directory and loads it into memory."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "from neon.data import load_mnist\n",
-    "\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_mnist(path='data')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This function automatically splits the images `X` and labels `y` into training (60,000 examples) and testing (10,000 examples) data. The training images `X_train` is a numpy array with shape `(num_examples, num_features) = (60000, 784)`.\n",
-    "\n",
-    "During training, neon iterates over the training examples to compute the gradients. We use the following commands to set up the `ArrayIterator` object that handles sending data to the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "from neon.data import ArrayIterator\n",
-    "\n",
-    "# setup training set iterator\n",
-    "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
-    "# setup test set iterator\n",
-    "test_set = ArrayIterator(X_test, y_test, nclass=nclass)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For small datasets like MNIST, this step may seem trivial. However, for large datasets that cannot fit into memory (e.g. ImageNet or Sports-1M), the data has to be efficiently loaded and fed to the optimizer in batches. This requires more advanced iterators described in Loading data.\n",
-    "\n",
-    "## Model specification\n",
-    "Training a deep learning model in Neon requires \n",
-    "* Specifying the dataset\n",
-    "* Building a model from a list of layers\n",
-    "* Cost function\n",
-    "* Learning rule. \n",
-    "\n",
-    "Here we guide you through each item in turn.\n",
-    "\n",
-    "### Initializing weights\n",
-    "Neon supports many ways of initializing weight matrices. In this tutorial, we initialize the weights using a Gaussian distribution with zero mean and 0.01 standard deviation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "from neon.initializers import Gaussian\n",
-    "\n",
-    "init_norm = Gaussian(loc=0.0, scale=0.01)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Model architecture\n",
-    "The model is specified as a list of layers. For classifying MNIST images, we use a multi-layer perceptron with fully connected layers.\n",
-    "\n",
-    "- Affine (i.e. fully-connected) layer with 100 hidden units and a rectified linear activation function, defined as Rectlin().\n",
-    "- An output layer with 10 units to match the number of labels in the MNIST dataset. We use the Softmax() activation function to ensure the outputs sum to one and are within the range [0,1].\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "from neon.layers import Affine\n",
     "from neon.transforms import Rectlin, Softmax\n",
+    "from neon.models import Model\n",
+    "from neon.layers import GeneralizedCost\n",
+    "from neon.transforms import CrossEntropyMulti\n",
+    "from neon.optimizers import GradientDescentMomentum\n",
+    "\n",
+    "be = gen_backend(batch_size=128)\n",
+    "(X_train, y_train), (X_test, y_test), nclass = load_mnist(path='stockdata')\n",
+    "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
+    "test_set = ArrayIterator(X_test, y_test, nclass=nclass)\n",
+    "\n",
+    "init_norm = Gaussian(loc=0.0, scale=0.01)\n",
     "\n",
     "layers = []\n",
     "layers.append(Affine(nout=100, init=init_norm, activation=Rectlin()))\n",
     "layers.append(Affine(nout=10, init=init_norm,\n",
-    "                     activation=Softmax()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We initialize the weights in each layer with the init_norm defined previously. Neon supports many other layer types (convolutional, pooling, recurrent, etc.) that will be described in subsequent examples. We then construct the model via"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# initialize model object\n",
-    "from neon.models import Model\n",
+    "                     activation=Softmax()))\n",
     "\n",
-    "mlp = Model(layers=layers)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Costs\n",
-    "The cost function is wrapped within a GeneralizedCost layer, which handles the comparison of the outputs with the provided labels in the dataset. One common cost function which we use here is the cross entropy loss."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from neon.layers import GeneralizedCost\n",
-    "from neon.transforms import CrossEntropyMulti\n",
-    "\n",
-    "cost = GeneralizedCost(costfunc=CrossEntropyMulti())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Learning rules\n",
-    "For learning, we use stochastic gradient descent with a learning rate of 0.1 and momentum coefficient of 0.9.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from neon.optimizers import GradientDescentMomentum\n",
-    "\n",
+    "mlp = Model(layers=layers)\n",
+    "cost = GeneralizedCost(costfunc=CrossEntropyMulti())\n",
     "optimizer = GradientDescentMomentum(0.1, momentum_coef=0.9)"
    ]
   },
@@ -211,21 +51,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Callbacks\n",
-    "Neon provides an API for calling operations during the model fit (see Callbacks). Here we set up the default callback, which is displaying a progress bar for each epoch.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from neon.callbacks.callbacks import Callbacks\n",
+    "# Dependencies\n",
     "\n",
-    "callbacks = Callbacks(mlp, eval_set=test_set)\n"
+    "This callback makes use of new features in bokeh 0.11, which needs to be installed before running the callback.\n",
+    "\n",
+    "We can install the pip package using the notebook terminal or from inside the notebook itself.  \n",
+    "\n",
+    "Just make sure to 'Kernel-> restart and run all' to reload the kernel with the newly installed package version, after installation."
    ]
   },
   {
@@ -236,7 +68,36 @@
    },
    "outputs": [],
    "source": [
-    "from neon.callbacks.callbacks import Callback\n",
+    "import subprocess\n",
+    "subprocess.check_output(['pip', 'install', 'bokeh==0.11'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Callbacks\n",
+    "Neon provides an API for calling operations during the model fit. The progress bars that get displayed during training are an example of a callback, and we'll go through the process of adding a new callback that visualizizes cost graphically instead of using stdout.\n",
+    "\n",
+    "To make a new callback, subclass the neon.callbacks.callbacks Callback object, and implement the desired callback methods.  \n",
+    "\n",
+    "Each of the callback functions has access to 'callback_data' and 'model' objects.  'callback_data' is the h5 file that can be saved by supplying the '-o' flag to neon, and callbacks that compute data should store it here.  Visualization callbacks can read already computed data such as train and validation cost out of 'callback_data'.\n",
+    "\n",
+    "This callback implements the subset of the available callback functions that it needs:\n",
+    "http://neon.nervanasys.com/docs/latest/callbacks.html#creating-callbacks\n",
+    "\n",
+    "This callback makes use of new features in bokeh 0.11, which needs to be installed before running the callback."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from neon.callbacks.callbacks import Callbacks, Callback\n",
     "from bokeh.plotting import output_notebook, figure, ColumnDataSource, show\n",
     "from bokeh.io import push_notebook\n",
     "from timeit import default_timer\n",
@@ -247,123 +108,85 @@
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, epoch_freq=1,\n",
-    "                 minibatch_freq=1, update_thresh_s=0.1):\n",
+    "                 minibatch_freq=1, update_thresh_s=0.65):\n",
     "        super(CostVisCallback, self).__init__(epoch_freq=epoch_freq,\n",
     "                                                  minibatch_freq=minibatch_freq)\n",
     "        self.update_thresh_s = update_thresh_s\n",
     "        \n",
     "        output_notebook()\n",
     "        \n",
-    "        self.fig = figure(name=\"cost\", title=\"TODO\")\n",
+    "        self.fig = figure(name=\"cost\", title=\"Cost\", x_axis_label=\"Epoch\", plot_width=900)\n",
     "        self.train_source = ColumnDataSource(data=dict(x=[], y0=[]))\n",
     "        self.train_cost = self.fig.line(x=[], y=[], source=self.train_source)\n",
     "        \n",
+    "        self.val_source = ColumnDataSource(data=dict(x=[], y0=[]))\n",
+    "        self.val_cost = self.fig.line(x=[], y=[], source=self.val_source, color='red')\n",
+    "        \n",
     "\n",
     "    def on_train_begin(self, callback_data, model, epochs):\n",
+    "        \"\"\"\n",
+    "        A good place for one-time startup operations, such as displaying the figure.\n",
+    "        \"\"\"\n",
     "        show(self.fig)\n",
     "\n",
     "    def on_epoch_begin(self, callback_data, model, epoch):\n",
+    "        \"\"\"\n",
+    "        Since the number of minibatches per epoch is not constant, calculate it here.\n",
+    "        \"\"\"\n",
     "        self.start_epoch = self.last_update = default_timer()\n",
     "        self.nbatches = model.nbatches\n",
     "\n",
     "    def on_minibatch_end(self, callback_data, model, epoch, minibatch):\n",
+    "        \"\"\"\n",
+    "        Read the training cost already computed by the TrainCostCallback out of 'callback_data', and display it.\n",
+    "        \"\"\"\n",
     "        now = default_timer()\n",
     "        mb_complete = minibatch + 1\n",
+    "        \n",
+    "        mbstart = callback_data['time_markers/minibatch'][epoch-1] if epoch > 0 else 0\n",
+    "        train_cost = callback_data['cost/train'][mbstart + minibatch]\n",
+    "\n",
+    "        mb_epoch_scale = epoch + minibatch / float(self.nbatches)\n",
+    "        self.train_source.data['x'].append(mb_epoch_scale)\n",
+    "        self.train_source.data['y'].append(train_cost)\n",
+    "            \n",
     "        if (now - self.last_update > self.update_thresh_s or mb_complete == self.nbatches):\n",
     "            self.last_update = now\n",
-    "            mbstart = callback_data['time_markers/minibatch'][epoch-1] if epoch > 0 else 0\n",
-    "            train_cost = callback_data['cost/train'][mbstart + minibatch]\n",
-    "            \n",
-    "            mb_epoch_scale = epoch + minibatch / float(self.nbatches)\n",
-    "            self.train_source.data['x'].append(mb_epoch_scale)\n",
-    "            self.train_source.data['y'].append(train_cost)\n",
+    "\n",
     "            push_notebook()\n",
-    "            \n",
     "\n",
     "    def on_epoch_end(self, callback_data, model, epoch):\n",
+    "        \"\"\"\n",
+    "        If per-epoch validation cost is being computed by the LossCallback, plot that too. \n",
+    "        \"\"\"\n",
     "        _eil = self._get_cached_epoch_loss(callback_data, model, epoch, 'loss')\n",
     "        if _eil:\n",
-    "            stuff = (_eil['costnm'], _eil['cost'], _eil['time'])\n",
-    "    \n",
+    "            self.val_source.data['x'].append(1 + epoch)\n",
+    "            self.val_source.data['y'].append(_eil['cost'])\n",
+    "            push_notebook()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running our callback\n",
+    "\n",
+    "We'll create all of the standard neon callbacks, and then add ours at the end.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "callbacks = Callbacks(mlp, eval_set=test_set)\n",
     "cv = CostVisCallback()\n",
-    "callbacks.add_callback(cv)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Putting it all together\n",
-    "We are ready to put all the ingredients together and run our model!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mlp.fit(train_set, optimizer=optimizer, num_epochs=10, cost=cost,\n",
-    "        callbacks=callbacks)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "At the beginning of the fitting procedure, neon propagates train_set through the model to set the input and output shapes of each layer. Each layer has a `configure()` method that determines the appropriate layer shapes, and an `allocate()` method to set up the needed buffers for holding the forward propagation information.\n",
-    "\n",
-    "During the training, neon sends batches of the training data through the model, calling each layers’ `fprop()` and `bprop()` methods to compute the gradients and update the weights."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using the trained model\n",
-    "Now that the model is successfully trained, we can use the trained model to classify a novel image, measure performance, and visualize the weights and training results.\n",
-    "\n",
-    "#### Inference\n",
-    "Given a set of images such as those contained in the iterable `test_set`, we can fetch the ouput of the final model layer via\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "results = mlp.get_outputs(test_set)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The variable results is a numpy array with shape `(num_test_examples, num_outputs) = (10000,10)` with the model probabilities for each label.\n",
-    "\n",
-    "#### Performance\n",
-    "Neon supports convenience functions for evaluating performance using custom metrics. Here we measure the misclassification rate on the held out test set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from neon.transforms import Misclassification\n",
-    "\n",
-    "# evaluate the model on test_set using the misclassification metric\n",
-    "error = mlp.eval(test_set, metric=Misclassification())*100\n",
-    "print('Misclassification error = %.1f%%' % error)"
+    "callbacks.add_callback(cv)\n",
+    "mlp.fit(train_set, optimizer=optimizer, num_epochs=10, cost=cost, callbacks=callbacks)"
    ]
   }
  ],
