--- a/07 visualization callback.ipynb
+++ b/07 visualization callback.ipynb
@@ -31,7 +31,7 @@
     "from neon.optimizers import GradientDescentMomentum\n",
     "\n",
     "be = gen_backend(batch_size=128)\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_mnist(path='stockdata')\n",
+    "(X_train, y_train), (X_test, y_test), nclass = load_mnist()\n",
     "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
     "test_set = ArrayIterator(X_test, y_test, nclass=nclass)\n",
     "\n",
@@ -57,7 +57,7 @@
     "\n",
     "We can install the pip package using the notebook terminal or from inside the notebook itself.  \n",
     "\n",
-    "Just make sure to 'Kernel-> restart and run all' to reload the kernel with the newly installed package version, after installation."
+    "After installation, execute 'Kernel-> restart and run all' to reload the kernel with the newly installed package version."
    ]
   },
   {
@@ -77,16 +77,15 @@
    "metadata": {},
    "source": [
     "## Callbacks\n",
-    "Neon provides an API for calling operations during the model fit. The progress bars that get displayed during training are an example of a callback, and we'll go through the process of adding a new callback that visualizizes cost graphically instead of using stdout.\n",
+    "Neon provides an API for calling operations during the model fit. The progress bars displayed during training are an example of a callback, and we'll go through the process of adding a new callback that visualizes cost graphically instead of printing to screen.\n",
     "\n",
-    "To make a new callback, subclass the neon.callbacks.callbacks Callback object, and implement the desired callback methods.  \n",
+    "To make a new callback, subclass from `Callback`, and implement the desired callback methods.  \n",
     "\n",
-    "Each of the callback functions has access to 'callback_data' and 'model' objects.  'callback_data' is the h5 file that can be saved by supplying the '-o' flag to neon, and callbacks that compute data should store it here.  Visualization callbacks can read already computed data such as train and validation cost out of 'callback_data'.\n",
+    "Each of the callback functions have access to `callback_data` and `model` objects.  `callback_data` is an H5 file that is saved when supplying the `-o` flag to neon, and callbacks should store any computed data into `callback_data`.  Visualization callbacks can read already computed data such as training or validation cost from `callback_data`.\n",
     "\n",
     "This callback implements the subset of the available callback functions that it needs:\n",
     "http://neon.nervanasys.com/docs/latest/callbacks.html#creating-callbacks\n",
-    "\n",
-    "This callback makes use of new features in bokeh 0.11, which needs to be installed before running the callback."
+    "\n"
    ]
   },
   {
