--- a/08 Overfitting Tutorial.ipynb
+++ b/08 Overfitting Tutorial.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overfitting Tutorial\n",
+    "\n",
+    "Many deep learning models run the danger of overfitting on the training set. When this happens, the model fails to generalize its performance to unseen data, such as a separate validation set. Here we present a simple tutorial on how to recognize overfitting using our visualization tools, and how to apply Dropout layers to prevent overfitting.\n",
+    "\n",
+    "We use a simple network of convolutional layers on the CIFAR-10 dataset, a dataset of images belonging to 10 categories. \n",
+    "\n",
+    "The code below will build the model and train on the CIFAR-10 dataset for 25 epochs (~2 minutes on Titan X GPUs), displaying both the training cost as well as the cost on the validation set.\n",
+    "\n",
+    "Note: We highly recommend users run this model on Maxwell GPUs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -48,13 +63,10 @@
     "convp1s2 = dict(init=init_uni, batch_norm=False, activation=relu, padding=1, strides=2)\n",
     "\n",
     "layers = [\n",
-    "#           Dropout(keep=.8),\n",
     "          Conv((3, 3, 64), **convp1),\n",
     "          Conv((3, 3, 64), **convp1s2),\n",
-    "#           Dropout(keep=.5),\n",
     "          Conv((3, 3, 128), **convp1),\n",
     "          Conv((3, 3, 128), **convp1s2),\n",
-    "#           Dropout(keep=.5),\n",
     "          Conv((3, 3, 128), **convp1),\n",
     "          Conv((1, 1, 128), **conv),\n",
     "          Conv((1, 1, 16), **conv),\n",
@@ -76,6 +88,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overfitting\n",
+    "You should notice that in the logs above, after around Epoch 15, the model begins to overfit. Even though the cost on the training set continues to decrease, the validation loss flattens (even increasing slightly). We can visualize these effects using the code below.\n",
+    "\n",
+    "Note: The same plots can be created using our `nvis` command line utility (see: http://neon.nervanasys.com/docs/latest/tools.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from neon.visualizations.figure import cost_fig, hist_fig, deconv_summary_page\n",
+    "from neon.visualizations.data import h5_cost_data, h5_hist_data, h5_deconv_data\n",
+    "from bokeh.plotting import output_notebook, show\n",
+    "\n",
+    "cost_data = h5_cost_data('data.h5', False)\n",
+    "output_notebook()\n",
+    "show(cost_fig(cost_data, 400, 800, epoch_axis=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "This situation illustrates the importance of plotting the validation loss (blue) in addition to the training cost (red). The training cost may mislead the user into thinking that model is continuing to perform well, but we can see from the validation loss that the model has begun to overfit.\n",
+    "\n",
+    "## Dropout layers\n",
+    "\n",
+    "To correct overfitting, we introduce `Dropout` layers to the model, as shown below. `Dropout` layers randomly silence a subset of units for each minibatch, and are an effective means of preventing overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "layers = [\n",
+    "          Dropout(keep=.8),  # Added Dropout\n",
+    "          Conv((3, 3, 64), **convp1),\n",
+    "          Conv((3, 3, 64), **convp1s2),\n",
+    "          Dropout(keep=.5),   # Added Dropout\n",
+    "          Conv((3, 3, 128), **convp1),\n",
+    "          Conv((3, 3, 128), **convp1s2),\n",
+    "          Dropout(keep=.5),   # Added Dropout\n",
+    "          Conv((3, 3, 128), **convp1),\n",
+    "          Conv((1, 1, 128), **conv),\n",
+    "          Conv((1, 1, 16), **conv),\n",
+    "          Pooling(8, op=\"avg\"),\n",
+    "          Activation(Softmax())]\n",
+    "\n",
+    "cost = GeneralizedCost(costfunc=CrossEntropyMulti())\n",
+    "\n",
+    "mlp = Model(layers=layers)\n",
+    "\n",
+    "\n",
+    "# configure callbacks\n",
+    "callbacks = Callbacks(mlp, output_file='data.h5', eval_set=valid_set, eval_freq=1)\n",
+    "\n",
+    "print \"Training\"\n",
+    "mlp.fit(train_set, optimizer=opt_gdm, num_epochs=num_epochs, cost=cost, callbacks=callbacks)\n",
+    "\n",
+    "print('Misclassification error = %.1f%%' % (mlp.eval(valid_set, metric=Misclassification())*100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then plot the results of the training run below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -93,13 +189,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the dropout layers in place, the model is now able to continue performing well on the validation set beyond epoch 15. The validation loss (blue) is not shifted downwards compared to the previous figure, and the model reaches better validation performance. "
+   ]
   }
  ],
  "metadata": {
