Update 03 Writing your own dataset.ipynb

--- a/03 Writing your own dataset.ipynb
+++ b/03 Writing your own dataset.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we load the pickle file with our SVHN dataset."
+    "The modified SVHN dataset can be found at: https://s3-us-west-1.amazonaws.com/nervana-course/svhn_64.p. Place this dataset into the data/ folder and we can then load the pickle file with our SVHN dataset."
    ]
   },
   {
