Update example 01 to work with current Neon

--- a/01 MNIST example.ipynb
+++ b/01 MNIST example.ipynb
@@ -17,6 +17,13 @@
     "\n",
     "This tutorial is similar to the model specified in `examples/mnist_mlp.py`.\n",
     "\n",
+    "## Setup\n",
+    "This example works with Python 2.7. The `urllib` request method needs to be changed in the inference steps for Python 3.x.\n",
+    "\n",
+    "Your environment needs to have the following packages installed:\n",
+    "* Neon ([Anaconda installation instructions](https://neon.nervanasys.com/docs/latest/installation.html#anaconda-install]))\n",
+    "* matplotlib (for the inference) \n",
+    "\n",
     "## Preamble\n",
     "The first step is to set up our compute backend."
    ]
@@ -25,7 +32,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -47,38 +54,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from neon.data import load_mnist\n",
+    "from neon.data import MNIST\n",
     "\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_mnist(path='data')"
+    "mnist = MNIST(path='downloadeddata/')\n",
+    "train_set = mnist.train_iter\n",
+    "valid_set = mnist.valid_iter\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function automatically splits the images `X` and labels `y` into training (60,000 examples) and testing (10,000 examples) data. The training images `X_train` is a numpy array with shape `(num_examples, num_features) = (60000, 784)`.\n",
-    "\n",
-    "During training, neon iterates over the training examples to compute the gradients. We use the following commands to set up the `ArrayIterator` object that handles sending data to the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from neon.data import ArrayIterator\n",
-    "\n",
-    "# setup training set iterator\n",
-    "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
-    "# setup test set iterator\n",
-    "test_set = ArrayIterator(X_test, y_test, nclass=nclass)"
+    "During training, neon iterates over the training examples to compute the gradients. The `train_iter` and `valid_iter` handle sending data to the model for training and validation, respectively."
    ]
   },
   {
@@ -104,7 +95,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -129,7 +120,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -153,7 +144,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -175,7 +166,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -198,7 +189,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -219,13 +210,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "from neon.callbacks.callbacks import Callbacks\n",
     "\n",
-    "callbacks = Callbacks(mlp, eval_set=test_set)\n"
+    "callbacks = Callbacks(mlp, eval_set=valid_set)\n"
    ]
   },
   {
@@ -273,11 +264,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "results = mlp.get_outputs(test_set)"
+    "results = mlp.get_outputs(valid_set)"
    ]
   },
   {
@@ -301,7 +292,7 @@
     "from neon.transforms import Misclassification\n",
     "\n",
     "# evaluate the model on test_set using the misclassification metric\n",
-    "error = mlp.eval(test_set, metric=Misclassification())*100\n",
+    "error = mlp.eval(valid_set, metric=Misclassification())*100\n",
     "print('Misclassification error = %.1f%%' % error)"
    ]
   },
@@ -323,6 +314,8 @@
    "outputs": [],
    "source": [
     "import urllib\n",
+    "from neon.backends import gen_backend\n",
+    "\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -330,10 +323,13 @@
     "\n",
     "# download image\n",
     "url = \"http://datawrangling.s3.amazonaws.com/sample_digit.png\"\n",
-    "urllib.urlretrieve(url, filename=\"img/digit.jpg\")\n",
+    "imgfile = \"downloadeddata/digit.jpg\"\n",
+    "urllib.urlretrieve(url, filename=imgfile)\n",
+    "# Use this line instead for Python 3\n",
+    "# urllib.request.urlretrieve(url, filename=imgfile)\n",
     "\n",
     "# scale to 28x28 pixels\n",
-    "img = Image.open(\"img/digit.jpg\")\n",
+    "img = Image.open(imgfile)\n",
     "img.thumbnail((28, 28))\n",
     "\n",
     "digit = np.asarray(img, dtype=np.float32)[:, :, 0]\n",
@@ -342,6 +338,7 @@
     "digit = digit.reshape(784, 1)\n",
     "\n",
     "# store digit into a GPU tensor\n",
+    "be = gen_backend(batch_size=1)\n",
     "x_new = be.zeros((28*28, 128), dtype=np.float32)\n",
     "x_new[:, 0] = digit\n",
     "\n"
@@ -360,18 +357,19 @@
     "outputs = outputs.get()[:, 0]\n",
     "\n",
     "# examine the output of the model for this image\n",
-    "print \"Model final layer was: {}\".format(outputs)\n",
-    "print \"The most probable guess is digit: {}\".format(np.argmax(outputs))\n",
+    "print (\"Model final layer was: {}\".format(outputs))\n",
+    "print (\"The most probable guess is digit: {}\".format(np.argmax(outputs)))\n",
     "plt.figure(2)\n",
     "plt.imshow(img)\n"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:course2]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-course2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -383,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
