updates for v1.6 and LSTM

--- a/01 MNIST example.ipynb
+++ b/01 MNIST example.ipynb
@@ -54,15 +54,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from neon.data import MNIST\n",
     "\n",
-    "mnist = MNIST(path='downloadeddata/')\n",
+    "mnist = MNIST(path='data/')\n",
     "train_set = mnist.train_iter\n",
-    "valid_set = mnist.valid_iter\n"
+    "valid_set = mnist.valid_iter"
    ]
   },
   {
@@ -313,17 +313,18 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline \n",
+    "\n",
     "import urllib\n",
     "from neon.backends import gen_backend\n",
     "\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline \n",
     "\n",
     "# download image\n",
     "url = \"http://datawrangling.s3.amazonaws.com/sample_digit.png\"\n",
-    "imgfile = \"downloadeddata/digit.jpg\"\n",
+    "imgfile = \"data/digit.jpg\"\n",
     "urllib.urlretrieve(url, filename=imgfile)\n",
     "# Use this line instead for Python 3\n",
     "# urllib.request.urlretrieve(url, filename=imgfile)\n",
@@ -367,9 +368,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-course2-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -381,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
