--- a/03 Object Localization Demo.ipynb
+++ b/03 Object Localization Demo.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Writing a custom dataset\n",
-    "This notebook will walk you through implementing a custom iterator for a modified version of the Street View House Number (SVHN) dataset. You will then design a network to train on this dataset. \n",
+    "This notebook will walk you through designing a network on the Street View House Number (SVHN) dataset. \n",
     "\n",
     "## SVHN dataset\n",
     "\n",
@@ -15,13 +15,7 @@
     "\n",
     "We have modified the dataset such that each image is 64x64 pixels (with 3 color channels), and the target is a *single* bounding box over all the digits. Your goal is to build a network that, given an image, returns bounding box coordinates for the location of the digit sequence.\n",
     "\n",
-    "This notebook is split into two parts:\n",
-    "* Writing a custom dataiterator\n",
-    "* Building a prediction network\n",
-    "\n",
-    "## Custom dataset\n",
-    "\n",
-    "Because the training set of ~27,000 images can fit into the memory of a single Titan X GPU, we could use the `ArrayIterator` class to provide data to the model. However, when the dataset may have more images or larger image sizes, that is no longer an option. Our high-performance `DataLoader`, which loads image in batches and performs complex augmentation, cannot currently handle bounding box data (stay tuned, an object localization dataloader is coming in a future neon release!).\n",
+    "## Data\n",
     "\n",
     "We've saved the dataset as a pickle file `svhn_64.p`. This file has a few variables:\n",
     "- `X_train`: a numpy array of shape `(num_examples, num_features)`, where `num_examples = 26624`, and `num_features = 3*64*64 = 12288`\n",
@@ -55,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The modified SVHN dataset can be found at: https://s3-us-west-1.amazonaws.com/nervana-course/svhn_64.p. Place this dataset into the data/ folder and we can then load the pickle file with our SVHN dataset."
+    "Next, we load the pickle file with our SVHN dataset."
    ]
   },
   {
@@ -81,7 +75,7 @@
     "collapsed": true
    },
    "source": [
-    "Below is a skeleton of the SVHN data iterator for you to fill out, with notes to help along the way. The goal is an object that returns, with each call, a tuple of `(X, Y)` for the input and the target bounding boxes."
+    "We've written a custom data iterator for this dataset which will, with each call, return a tuple of `(X, Y)` for the input and the target bounding boxes."
    ]
   },
   {
@@ -92,82 +86,14 @@
    },
    "outputs": [],
    "source": [
-    "# import some useful packages\n",
-    "from neon.data import NervanaDataIterator\n",
-    "import numpy as np\n",
-    "import cPickle\n",
-    "import os\n",
-    "\n",
-    "class SVHN(NervanaDataIterator):\n",
-    "\n",
-    "    def __init__(self, X, Y, lshape):\n",
-    "\n",
-    "        # Load the numpy data into some variables. We divide the image by 255 to normalize the values\n",
-    "        # between 0 and 1.\n",
-    "        self.X = X / 255.\n",
-    "        self.Y = Y\n",
-    "        self.shape = lshape  # shape of the input data (e.g. for images, (C, H, W))\n",
-    "\n",
-    "        # 1. assign some required and useful attributes\n",
-    "        self.start = 0  # start at zero\n",
-    "        self.ndata = ...  # number of images in X (hint: use X.shape)\n",
-    "        self.nfeatures = ...  # number of features in X (hint: use X.shape)\n",
-    "\n",
-    "        # number of minibatches per epoch\n",
-    "        # to calculate this, use the batchsize, which is stored in self.be.bsz\n",
-    "        self.nbatches = ...\n",
-    "        \n",
-    "        \n",
-    "        # 2. allocate memory on the GPU for a minibatch's worth of data.\n",
-    "        # (e.g. use `self.be` to access the backend.). See the backend documentation.\n",
-    "        # to get the minibatch size, use self.be.bsz\n",
-    "        # hint: X should have shape (# features, mini-batch size)\n",
-    "        # hint: use some of the attributes previously defined above\n",
-    "        self.dev_X = ...\n",
-    "        self.dev_Y = ...\n",
-    "\n",
-    "\n",
-    "    def reset(self):\n",
-    "        self.start = 0\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        # 3. loop through minibatches in the dataset\n",
-    "        for index in range(self.start, self.ndata, self.be.bsz):\n",
-    "            # 3a. grab the right slice from the numpy arrays\n",
-    "            inputs = ...\n",
-    "            targets = ...\n",
-    "            \n",
-    "            # The arrays X and Y data are in shape (batch_size, num_features),\n",
-    "            # but the iterator needs to return data with shape (num_features, batch_size).\n",
-    "            # here we transpose the data, and then store it as a contiguous array. \n",
-    "            # numpy arrays need to be contiguous before being loaded onto the GPU.\n",
-    "            inputs = np.ascontiguousarray(inputs.T)\n",
-    "            targets = np.ascontiguousarray(targets.T)\n",
-    "                        \n",
-    "            # here we test your implementation\n",
-    "            # your slice has to have the same shape as the GPU tensors you allocated\n",
-    "            assert inputs.shape == self.dev_X.shape, \\\n",
-    "                   \"inputs has shape {}, but dev_X is {}\".format(inputs.shape, self.dev_X.shape)\n",
-    "            assert targets.shape == self.dev_Y.shape, \\\n",
-    "                   \"targets has shape {}, but dev_Y is {}\".format(targets.shape, self.dev_Y.shape)\n",
-    "            \n",
-    "            # 3b. transfer from numpy arrays to device\n",
-    "            # - use the GPU memory buffers allocated previously,\n",
-    "            #    and call the myTensorBuffer.set() function. \n",
-    "            self.dev_X ...\n",
-    "            self.dev_Y ...\n",
-    "            \n",
-    "            # 3c. yield a tuple of the device tensors.\n",
-    "            # the first should of shape (num_features, batch_size)\n",
-    "            # the second should of shape (4, batch_size)\n",
-    "            yield (..., ...)"
+    "from data.SVHN import SVHN"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check your implementation! Below we grab an iteration and print out the output of the dataset. Importantly: make sure that the output tensors are contiguous (e.g. `is_contiguous = True` in the output below). This means that they are allocated on a contiguous set of memory, which is important for the downstream calculations. Contiguity can be broken by operations like transpose."
+    "Below we grab an iteration and print out the output of the dataset."
    ]
   },
   {
@@ -185,9 +111,7 @@
     "iterator = train_set.__iter__()\n",
     "(X, Y) = iterator.next()\n",
     "print X  # this should be shape (12288, 128)\n",
-    "print Y  # this should be shape (4, 128)\n",
-    "assert X.is_contiguous\n",
-    "assert Y.is_contiguous"
+    "print Y  # this should be shape (4, 128)"
    ]
   },
   {
@@ -196,7 +120,7 @@
     "collapsed": false
    },
    "source": [
-    "If all goes well, you are ready to try training on this network! First, let's reset the dataset to zero (since you drew one example from above). We also add a test set for evaluation."
+    "You are now ready to try training on this data! First, let's reset the dataset to zero (since you drew one example from above). We also add a test set for evaluation."
    ]
   },
   {
@@ -218,12 +142,14 @@
    "metadata": {},
    "source": [
     "### Model architecture\n",
-    "We recommend using a VGG-style convolutional neural network to train this model, using the ConvNet Design Philosophy we introduced earlier. We've imported some relevant packages that you may want to use, and have some guiding steps for implementing your network. Experiment with networks of different sizes!\n",
+    "We recommend using a VGG-style convolutional neural network to train this model (alternating Convolution and Pooling layers). We've imported some relevant packages that you may want to use, and put in a tiny toy network. Experiment with networks of different sizes and depths!\n",
     "\n",
     "Some tips:\n",
     "- Training a model for 10 epochs should take 30s/epoch. If you are taking longer than that, your network is too large.\n",
     "- Compare the training set cost and the validation set loss to make sure you are not overfitting on the data.\n",
-    "- Try to get a validation set loss of ~220 after 10 epochs"
+    "- Try to get a validation set loss of ~220 after 10 epochs\n",
+    "\n",
+    "Note: Because the goal of the network is output a bounding box, the last layer has 4 units for the four coordinates of the bounding box."
    ]
   },
   {
@@ -241,16 +167,20 @@
     "from neon.optimizers import GradientDescentMomentum, RMSProp\n",
     "from neon.transforms import Rectlin, Logistic, CrossEntropyMulti, Misclassification, SumSquared\n",
     "\n",
-    "# set up weight initializer\n",
-    "...\n",
+    "init_norm = Gaussian(loc=0.0, scale=0.01)\n",
     "\n",
     "# set up model layers\n",
-    "layers = []\n",
+    "conv = dict(init=init_norm, batch_norm=True, activation=Rectlin())\n",
+    "convp1 = dict(init=init_norm, batch_norm=True, activation=Rectlin(), padding=1)\n",
     "\n",
-    "layers.append(....)\n",
-    "\n",
-    "# the last layer should be a linear layer with nout=4, for the 4 coordinates of the bounding box.\n",
-    "layers.append(Linear(nout=4, init=Gaussian(loc=0.0, scale=0.01)))\n",
+    "layers = [Conv((3, 3, 64), **convp1),  # 64x64 feature map\n",
+    "          Conv((3, 3, 64), **convp1),\n",
+    "          Pooling((2, 2)),\n",
+    "          Dropout(keep=.5),\n",
+    "          Conv((3, 3, 96), **convp1),  # 32x32 feature map\n",
+    "          Conv((3, 3, 96), **convp1),\n",
+    "          Pooling((2, 2)),\n",
+    "          Linear(nout=4, init=init_norm)] # last layer good for bbox\n",
     "\n",
     "# use SumSquared cost\n",
     "cost = GeneralizedCost(costfunc=SumSquared())\n",
@@ -262,7 +192,7 @@
     "mlp = Model(layers=layers)\n",
     "\n",
     "# configure callbacks\n",
-    "callbacks = Callbacks(mlp, eval_set=test_set, eval_freq=1)\n",
+    "callbacks = Callbacks(mlp, eval_set=test_set, output_file='data.h5', eval_freq=1)\n",
     "\n",
     "# run fit\n",
     "mlp.fit(train_set, optimizer=optimizer, num_epochs=10, cost=cost, callbacks=callbacks)"
@@ -305,7 +235,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
