--- a/07 visualization callback.ipynb
+++ b/07 visualization callback.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "from neon.backends import gen_backend\n",
-    "from neon.data import load_mnist\n",
+    "from neon.data import MNIST\n",
     "from neon.data import ArrayIterator\n",
     "from neon.initializers import Gaussian\n",
     "from neon.layers import Affine\n",
@@ -31,9 +31,10 @@
     "from neon.optimizers import GradientDescentMomentum\n",
     "\n",
     "be = gen_backend(batch_size=128)\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_mnist()\n",
-    "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
-    "test_set = ArrayIterator(X_test, y_test, nclass=nclass)\n",
+    "\n",
+    "mnist = MNIST(path='data/')\n",
+    "train_set = mnist.train_iter\n",
+    "valid_set = mnist.valid_iter\n",
     "\n",
     "init_norm = Gaussian(loc=0.0, scale=0.01)\n",
     "\n",
@@ -182,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "callbacks = Callbacks(mlp, eval_set=test_set)\n",
+    "callbacks = Callbacks(mlp, eval_set=valid_set)\n",
     "cv = CostVisCallback()\n",
     "callbacks.add_callback(cv)\n",
     "mlp.fit(train_set, optimizer=optimizer, num_epochs=10, cost=cost, callbacks=callbacks)"
