updates for neon v1.8 support

--- a/01 MNIST example.ipynb
+++ b/01 MNIST example.ipynb
@@ -17,6 +17,14 @@
     "\n",
     "This tutorial is similar to the model specified in `examples/mnist_mlp.py`.\n",
     "\n",
+    "## Setup\n",
+    "\n",
+    "This example works with Python 2.7. The urllib request method needs to be changed in the inference steps for Python 3.x.\n",
+    "\n",
+    "Your environment needs to have the following packages installed:\n",
+    "- neon v1.8.1\n",
+    "- matplotlib (for the inference)\n",
+    "\n",
     "## Preamble\n",
     "The first step is to set up our compute backend."
    ]
@@ -40,7 +48,7 @@
     "collapsed": true
    },
    "source": [
-    "The MNIST dataset can be found on Yann LeCunn’s website. We have included an easy function that downloads the MNIST dataset into your `~/nervana/data/` directory and loads it into memory."
+    "The MNIST dataset can be found on Yann LeCunn’s website. We have included an easy function that downloads the MNIST dataset into your `~/nervana/data/` directory, loads it into memory, and returns `ArrayIterator` objects for the training and validation set."
    ]
   },
   {
@@ -51,40 +59,19 @@
    },
    "outputs": [],
    "source": [
-    "from neon.data import load_mnist\n",
+    "from neon.data import MNIST\n",
     "\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_mnist(path='data')"
+    "mnist = MNIST(path='data/')\n",
+    "train_set = mnist.train_iter\n",
+    "valid_set = mnist.valid_iter"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function automatically splits the images `X` and labels `y` into training (60,000 examples) and testing (10,000 examples) data. The training images `X_train` is a numpy array with shape `(num_examples, num_features) = (60000, 784)`.\n",
+    "During training, neon iterates over the training examples to compute the gradients. The `train_iter` and `valid_iter` handle sending data to the model for training and validation, respectively.\n",
     "\n",
-    "During training, neon iterates over the training examples to compute the gradients. We use the following commands to set up the `ArrayIterator` object that handles sending data to the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from neon.data import ArrayIterator\n",
-    "\n",
-    "# setup training set iterator\n",
-    "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
-    "# setup test set iterator\n",
-    "test_set = ArrayIterator(X_test, y_test, nclass=nclass)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "For small datasets like MNIST, this step may seem trivial. However, for large datasets that cannot fit into memory (e.g. ImageNet or Sports-1M), the data has to be efficiently loaded and fed to the optimizer in batches. This requires more advanced iterators described in Loading data.\n",
     "\n",
     "## Model specification\n",
@@ -225,7 +212,7 @@
    "source": [
     "from neon.callbacks.callbacks import Callbacks\n",
     "\n",
-    "callbacks = Callbacks(mlp, eval_set=test_set)\n"
+    "callbacks = Callbacks(mlp, eval_set=valid_set)\n"
    ]
   },
   {
@@ -273,11 +260,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "results = mlp.get_outputs(test_set)"
+    "results = mlp.get_outputs(valid_set)"
    ]
   },
   {
@@ -301,7 +288,7 @@
     "from neon.transforms import Misclassification\n",
     "\n",
     "# evaluate the model on test_set using the misclassification metric\n",
-    "error = mlp.eval(test_set, metric=Misclassification())*100\n",
+    "error = mlp.eval(valid_set, metric=Misclassification())*100\n",
     "print('Misclassification error = %.1f%%' % error)"
    ]
   },
@@ -330,10 +317,10 @@
     "\n",
     "# download image\n",
     "url = \"http://datawrangling.s3.amazonaws.com/sample_digit.png\"\n",
-    "urllib.urlretrieve(url, filename=\"img/digit.jpg\")\n",
+    "urllib.urlretrieve(url, filename=\"data/digit.jpg\")\n",
     "\n",
     "# scale to 28x28 pixels\n",
-    "img = Image.open(\"img/digit.jpg\")\n",
+    "img = Image.open(\"data/digit.jpg\")\n",
     "img.thumbnail((28, 28))\n",
     "\n",
     "digit = np.asarray(img, dtype=np.float32)[:, :, 0]\n",
