--- a/02 VGG Fine-tuning.ipynb
+++ b/02 VGG Fine-tuning.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "We begin by first generating a computational backend with the `gen_backend` function from neon. If there is a GPU available (recommended), this function will generate a GPU backend. Otherwise, a CPU backend will be used.\n",
     "\n",
-    "**Note: VGG will not fit on a Kepler GPU, so here we use CPU backend for instructional purposes**"
+    "**Note: VGG will not fit on a Kepler GPU, so here we use CPU backend for instructional purposes. If you are running on a Maxwell+ GPU, switch the backend to gpu below.**"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "source": [
     "from neon.backends import gen_backend\n",
     "\n",
-    "be = gen_backend(batch_size=64)"
+    "be = gen_backend(batch_size=64, backend='cpu')"
    ]
   },
   {
@@ -276,16 +276,10 @@
     "## Fine-tuning VGG on the CIFAR-10 dataset\n",
     "Now that we've modified the model for our new CIFAR-10 dataset, and loaded the model weights, let's give training a try!\n",
     "\n",
-    "The CIFAR-10 dataset is small enough to fit into memory, meaning that we would normally use an `ArrayIterator` to generate our dataset. However, the CIFAR-10 images are 28x28, and VGG was trained on ImageNet, which as images that are of 224x224 size. For this reason, we use our macrobatching `ImageLoader`, which performs image scaling and cropping on-the-fly. \n",
+    "## Aeon Dataloader\n",
+    "The CIFAR-10 dataset is small enough to fit into memory, meaning that we would normally use an `ArrayIterator` to generate our dataset. However, the CIFAR-10 images are 28x28, and VGG was trained on ImageNet, which ahs images that are of 224x224 size. For this reason, we use our macrobatching dataloader [aeon](http://aeon.nervanasys.com/), which performs image scaling and cropping on-the-fly. \n",
     "\n",
-    "Typically, we would first run `batch_writer.py` to create the macrobatches. With CIFAR-10, we have a special command to do this:\n",
-    "\n",
-    "```\n",
-    "batch_writer.py --set_type cifar10 --data_dir ~/cifar10_macrobatches --macro_size 10000 --target_size 40\n",
-    "```\n",
-    "\n",
-    "This will create macrobatches based on the CIFAR-10 dataset, storing the data in `--data_dir`. Each batch will have `macro_size=10000` images. We have already done this for you, so here we just download the macrobatches and create our `ImageLoader` object.\n",
-    "\n"
+    "To prepare the data, we first invoke an ingestion script that downloads the data and creates the macrobatches. The script is located in your neon folder. Here we use some python language to extract the path to neon from the virtual environment. "
    ]
   },
   {
@@ -296,12 +290,81 @@
    },
    "outputs": [],
    "source": [
-    "from neon.data import ImageLoader\n",
-    "data_dir = 'data/cifar10_batches'\n",
+    "import neon\n",
+    "import os\n",
+    "neon_path = os.path.split(os.path.dirname(neon.__file__))[0]\n",
+    "print \"Found path to neon as {}\".format(neon_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we execute the ingestion script below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%run $neon_path/examples/cifar10_msra/data.py --out_dir data/cifar10/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aeon configuration\n",
     "\n",
-    "img_set_options = dict(repo_dir=data_dir, inner_size=224)\n",
-    "train = ImageLoader(set_name='train', scale_range=(256, 384),\n",
-    "                    shuffle=True, **img_set_options)"
+    "Aeon allows a diverse set of configurations to specify which transformations are applied on-the-fly during training. These configs are specific as python dictionaries. For more detail, see the [aeon documentation](aeon.nervanasys.com)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    'manifest_filename': 'data/cifar10/train-index.csv',  # CSV manifest of data\n",
+    "    'manifest_root': 'data/cifar10',  # root data directory\n",
+    "    'image': {'height': 224, 'width': 224,  # output image size \n",
+    "              'scale': [0.875, 0.875],  # random scaling of image before cropping\n",
+    "              'flip_enable': True},  # randomly flip image\n",
+    "    'type': 'image,label',  # type of data\n",
+    "    'minibatch_size': be.bsz  # batch size\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then use this configuration to create our dataloader. The outputs from the dataloader are then sent through a series of transformations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from neon.data.aeon_shim import AeonDataLoader\n",
+    "from neon.data.dataloader_transformers import OneHot, TypeCast, BGRMeanSubtract\n",
+    "\n",
+    "train_set = AeonDataLoader(config, be)\n",
+    "\n",
+    "train_set = OneHot(train_set, index=1, nclasses=10)  # perform onehot on the labels\n",
+    "train_set = TypeCast(train_set, index=0, dtype=np.float32)  # cast the image to float32\n",
+    "train_set = BGRMeanSubtract(train_set, index=0)  # subtract image color means (based on default values)"
    ]
   },
   {
@@ -310,6 +373,8 @@
     "collapsed": true
    },
    "source": [
+    "## Optimizer configuration\n",
+    "\n",
     "For fine-tuning, we want the final `Affine` layer to be updated with a higher learning rate compared to the pre-trained weights throughout the rest of the network."
    ]
   },
@@ -359,7 +424,7 @@
     "from neon.callbacks.callbacks import Callbacks\n",
     "\n",
     "callbacks = Callbacks(model)\n",
-    "model.fit(train, optimizer=opt, num_epochs=10, cost=cost, callbacks=callbacks)\n"
+    "model.fit(train_set, optimizer=opt, num_epochs=10, cost=cost, callbacks=callbacks)\n"
    ]
   },
   {
