--- a/05 Model Architectures.ipynb
+++ b/05 Model Architectures.ipynb
@@ -46,7 +46,6 @@
    "outputs": [],
    "source": [
     "from neon.callbacks.callbacks import Callbacks\n",
-    "from neon.data import ArrayIterator, load_mnist\n",
     "from neon.initializers import Gaussian\n",
     "from neon.layers import GeneralizedCost, Affine, Multicost, SingleOutputTree\n",
     "from neon.models import Model\n",
@@ -72,12 +71,12 @@
    "outputs": [],
    "source": [
     "be = gen_backend(batch_size=128)\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_mnist(path='data')\n",
     "\n",
-    "# setup a training set iterator\n",
-    "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
-    "# setup a validation data set iterator\n",
-    "valid_set = ArrayIterator(X_test, y_test, nclass=nclass)"
+    "from neon.data import MNIST\n",
+    "\n",
+    "mnist = MNIST(path='data/')\n",
+    "train_set = mnist.train_iter\n",
+    "valid_set = mnist.valid_iter"
    ]
   },
   {
