--- a/06 Deep Residual Network.ipynb
+++ b/06 Deep Residual Network.ipynb
@@ -52,7 +52,9 @@
    "source": [
     "Loading a dataset\n",
     "-----------------\n",
-    "More details about loading and generating datasets in our [documentation](http://neon.nervanasys.com/docs/latest/datasets.html)."
+    "We use the [aeon](aeon.nervanasys.com) dataloader to present the data to the model. \n",
+    "\n",
+    "**Note: This assumes the data has already been downloaded and ingested. If that is not the case, follow the instructions in the 02 VGG Fine-tuning notebook to process the CIFAR-10 dataset**"
    ]
   },
   {
@@ -63,17 +65,35 @@
    },
    "outputs": [],
    "source": [
-    "# ImageLoader serves images with random crops and scaling. \n",
-    "# To prepocess the data with batch_writer.py, run:\n",
-    "# batch_writer.py --set_type cifar10 --data_dir <path-to-save-batches>\n",
-    "#                 --macro_size 10000 --target_size 40\n",
-    "from neon.data import ImageLoader\n",
-    "imgset_options = dict(inner_size=32, scale_range=40, aspect_ratio=110,\n",
-    "                 repo_dir='data/cifar10_batches', subset_pct=100)\n",
-    "train_set = ImageLoader(set_name='train', shuffle=True, \n",
-    "                        do_transforms=True, **imgset_options)\n",
-    "test_set = ImageLoader(set_name='validation', shuffle=False, \n",
-    "                       do_transforms=False, **imgset_options)\n"
+    "from neon.data.aeon_shim import AeonDataLoader\n",
+    "from neon.data.dataloader_transformers import OneHot, TypeCast, BGRMeanSubtract\n",
+    "import numpy as np\n",
+    "\n",
+    "# define configuration file for CIFAR-10 dataset\n",
+    "config = {\n",
+    "    'manifest_filename': 'data/cifar10/train-index.csv',  # CSV manifest of data\n",
+    "    'manifest_root': 'data/cifar10',  # root data directory\n",
+    "    'image': {'height': 32, 'width': 32,  # output image size \n",
+    "              'scale': [0.8, 0.8],  # random scaling of image before cropping\n",
+    "              'flip_enable': True},  # randomly flip image\n",
+    "    'type': 'image,label',  # type of data\n",
+    "    'minibatch_size': be.bsz  # batch size\n",
+    "}\n",
+    "\n",
+    "from neon.data.aeon_shim import AeonDataLoader\n",
+    "\n",
+    "# build train_set\n",
+    "train_set = AeonDataLoader(config, be)\n",
+    "train_set = OneHot(train_set, index=1, nclasses=10)  # perform onehot on the labels\n",
+    "train_set = TypeCast(train_set, index=0, dtype=np.float32)  # cast the image to float32\n",
+    "train_set = BGRMeanSubtract(train_set, index=0)  # subtract image color means (based on default values)\n",
+    "\n",
+    "# build test set\n",
+    "config['manifest_filename'] = 'data/cifar10/val-index.csv'\n",
+    "test_set = AeonDataLoader(config, be)\n",
+    "test_set = OneHot(test_set, index=1, nclasses=10)  # perform onehot on the labels\n",
+    "test_set = TypeCast(test_set, index=0, dtype=np.float32)  # cast the image to float32\n",
+    "test_set = BGRMeanSubtract(test_set, index=0)  # subtract image color means (based on default values)"
    ]
   },
   {
@@ -385,10 +405,10 @@
     "# also display with true labels\n",
     "plt.figure(1)\n",
     "for i, name in enumerate(imgs):\n",
-    "    imgs[name] = urllib.urlretrieve(imgs[name], filename=\"img/{}.jpg\".format(name))\n",
+    "    imgs[name] = urllib.urlretrieve(imgs[name], filename=\"data/{}.jpg\".format(name))\n",
     "    plt.subplot(100 + (10 * len(imgs)) + 1 + i)\n",
     "\n",
-    "    img = Image.open(\"img/{}.jpg\".format(name))\n",
+    "    img = Image.open(\"data/{}.jpg\".format(name))\n",
     "    crop = img.crop((0,0,min(img.size),min(img.size)))\n",
     "    crop.thumbnail((32, 32))\n",
     "\n",
@@ -445,7 +465,7 @@
     "for i, name in enumerate(imgs):\n",
     "    plt.subplot(100 + (10 * len(imgs)) + 1 + i)\n",
     "\n",
-    "    img = Image.open(\"img/{}.jpg\".format(name))\n",
+    "    img = Image.open(\"data/{}.jpg\".format(name))\n",
     "    crop = img.crop((0,0,min(img.size),min(img.size)))\n",
     "    crop.thumbnail((32, 32))\n",
     "\n",
