--- a/07 visualization callback.ipynb
+++ b/07 visualization callback.ipynb
@@ -20,10 +20,9 @@
    "outputs": [],
    "source": [
     "from neon.backends import gen_backend\n",
-    "from neon.data import load_mnist\n",
-    "from neon.data import ArrayIterator\n",
     "from neon.initializers import Gaussian\n",
     "from neon.layers import Affine\n",
+    "from neon.data import MNIST\n",
     "from neon.transforms import Rectlin, Softmax\n",
     "from neon.models import Model\n",
     "from neon.layers import GeneralizedCost\n",
@@ -31,9 +30,9 @@
     "from neon.optimizers import GradientDescentMomentum\n",
     "\n",
     "be = gen_backend(batch_size=128)\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_mnist()\n",
-    "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
-    "test_set = ArrayIterator(X_test, y_test, nclass=nclass)\n",
+    "mnist = MNIST(path='data/')\n",
+    "train_set = mnist.train_iter\n",
+    "test_set = mnist.valid_iter\n",
     "\n",
     "init_norm = Gaussian(loc=0.0, scale=0.01)\n",
     "\n",
@@ -187,6 +186,15 @@
     "callbacks.add_callback(cv)\n",
     "mlp.fit(train_set, optimizer=optimizer, num_epochs=10, cost=cost, callbacks=callbacks)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
