--- a/08 Overfitting Tutorial.ipynb
+++ b/08 Overfitting Tutorial.ipynb
@@ -28,7 +28,7 @@
     "from neon.layers import Conv, Dropout, Activation, Pooling, GeneralizedCost\n",
     "from neon.transforms import Rectlin, Softmax, CrossEntropyMulti, Misclassification\n",
     "from neon.models import Model\n",
-    "from neon.data import ArrayIterator, load_cifar10\n",
+    "from neon.data import CIFAR10\n",
     "from neon.callbacks.callbacks import Callbacks\n",
     "from neon.backends import gen_backend\n",
     "\n",
@@ -38,18 +38,13 @@
     "learning_rate = 0.05\n",
     "weight_decay = 0.001\n",
     "num_epochs = 25\n",
-    "data_dir = 'data/cifar10_batches'\n",
     "\n",
     "print \"Loading Data\"\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_cifar10(path=data_dir,\n",
-    "                                                            normalize=False,\n",
-    "                                                            contrast_normalize=True,\n",
-    "                                                            whiten=True)\n",
-    "\n",
-    "# really 10 classes, pad to nearest power of 2 to match conv output\n",
-    "train_set = ArrayIterator(X_train, y_train, nclass=16, lshape=(3, 32, 32))\n",
-    "valid_set = ArrayIterator(X_test, y_test, nclass=16, lshape=(3, 32, 32))\n",
-    "\n",
+    "dataset = CIFAR10(path='data/', normalize=False, \n",
+    "                  contrast_normalize=True, whiten=True, \n",
+    "                  pad_classes=True)  # CIFAR10 has 10 classes, network has 16 outputs, so we pad some extra classes.\n",
+    "train_set = dataset.train_iter\n",
+    "valid_set = dataset.valid_iter\n",
     "\n",
     "print \"Building Model\"\n",
     "init_uni = Gaussian(scale=0.05)\n",
