update answers for neon v1.8

--- a/answers/03 Writing your own dataset-ANSWER_KEY.ipynb
+++ b/answers/03 Writing your own dataset-ANSWER_KEY.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "import cPickle\n",
     "\n",
-    "fileName = 'data/svhn_64.p'\n",
+    "fileName = '../data/svhn_64.p'\n",
     "print(\"Loading {}...\".format(fileName))\n",
     "\n",
     "with open(fileName) as f:\n",
@@ -378,6 +378,15 @@
     "print \"Target box had coordinates: {}\".format(T[:,i])\n",
     "print \"Model prediction has coordinates: {}\".format(y[:, i])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
