--- a/answers/04 Writing a custom layer-ANSWER_KEY.ipynb
+++ b/answers/04 Writing a custom layer-ANSWER_KEY.ipynb
@@ -30,15 +30,11 @@
     "be = gen_backend('gpu', batch_size=128)\n",
     "\n",
     "# load data\n",
-    "from neon.data import load_mnist\n",
-    "from neon.data import ArrayIterator\n",
+    "from neon.data import MNIST\n",
     "\n",
-    "# download or reuse cached data\n",
-    "(X_train, y_train), (X_test, y_test), nclass = load_mnist()\n",
-    "\n",
-    "# setup training and test set iterator\n",
-    "train_set = ArrayIterator(X_train, y_train, nclass=nclass)\n",
-    "test_set = ArrayIterator(X_test, y_test, nclass=nclass)"
+    "mnist = MNIST(path='../data/')\n",
+    "train_set = mnist.train_iter\n",
+    "test_set = mnist.valid_iter"
    ]
   },
   {
